added enrollment status filter parameter
